<?xml version="1.0"?>
<package format="2">
  <name>joy_controller</name>
  <version>1.0.0</version>
  <description>The joy_controller package</description>


  <maintainer email="brschettini@gmail.com">brschettini</maintainer>


  <license>BSD</license>


  <url type="website">https://github.com/brschettini/joy_controller</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
